recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:8: error: reassignment to val
            steps=steps-1}
                 ^