recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  var r=length
  while(steps!=0){avance(r:Double)
            
            right(angle:Double)
           	r=length*shrink
            
            steps=steps-1}
}